--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <div class = "vi2"><b>72</b>&nbsp;/ 100</div>
             </div>
             <br><Br>
-            <div class = "continue">
+            <button class = "continue">
                 Continue
-            </div>
+            </button>
         </div>
     </div>
 </body>
